--- a/index.html
+++ b/index.html
@@ -51,161 +51,58 @@
   <!-- Page Content -->
   <div class="container">
 
-    <!-- recipe name, chef -->
+    <!-- carousel -->
     <div class="row">
-      <div class="col-12">
-          <div class="media">
-            <img class="d-flex mr-3 img-thumbnail align-self-center rounded hidden-xs" src="images/chef.jpg" alt="chef">
-            <div class="media-body">
-              <!-- Title -->
-              <h1 class="mt-0">Mirza Ghassemi</h1>
-              <!-- Author -->
-              <p class="lead"> by <a href="https://www.facebook.com/">Mahin Hekmatian</a></p>
+            <div class="col">
+                <div class="carousel slide" id="mycarousel" data-ride="carousel">
+                    <div class="carousel-inner" role="listbox">
+
+                        <div class="carousel-item active" id="mirza_ghessemie_mahin">
+                            <a href="./mirza_ghassemi_mahin.html">
+                                <img class="d-block img-fluid img-thumbnail align-self-center" src="img/mirza_ghessemie_mahin/ingredients_size_fitted.jpg" alt="ingredients">
+                                <div class="carousel-caption d-none d-md-block text-dark">
+                                    <h2>Mirza Ghessemie</h2>
+                                    <p>A tasty and easily made Iranian Omelette with eggplants!</p>
+                                </div>
+                            </a>
+                        </div>
+
+                        <div class="carousel-item" id="carrot_cake_alex">
+                            <a href="./carrot_cake_alex.html">
+                                <img class="d-block img-fluid img-thumbnail align-self-center" src="img/carrot_cake_alex/served.jpeg" alt="ingredients">
+                                <div class="carousel-caption d-none d-md-block text-dark">
+                                    <h2>Lazy carrot cake</h2>
+                                    <p>A quick &amp; healthy one!</p>
+                                </div>
+                            </a>
+                        </div>
+
+                        <div class="carousel-item" id="a_soup_recipe_from_the_north">
+                            <a href="./a_soup_recipe_from_the_north_joanna.html">
+                                <img class="d-block img-fluid img-thumbnail align-self-center" src="img/a_soup_recipe_from_the_north_joanna/ingredients.jpeg" alt="ingredients">
+                                <div class="carousel-caption d-none d-md-block text-dark">
+                                    <h2>A recipe from the North</h2>
+                                    <p>This soup makes even Swedish cheese tasty! ;)</p>
+                                </div>
+                            </a>
+                        </div>
+
+                    </div>
+
+                    <ol class="carousel-indicators">
+                        <li data-target="#mycarousel" data-slide-to="0" class="active"></li>
+                        <li data-target="#mycarousel" data-slide-to="1" class="active"></li>
+                        <li data-target="#mycarousel" data-slide-to="2" class="active"></li>
+                    </ol>
+                    <a class="carousel-control-prev" href="#mycarousel" role="button" data-slide="prev"><span class="carousel-control-prev-icon"></span></a>
+                    <a class="carousel-control-next" href="#mycarousel" role="button" data-slide="next"><span class="carousel-control-next-icon"></span></a>
+                    <button class="btn btn-danger btn-sm" id="carousel-button">
+                        <span class="fa fa-pause"></span>
+                    </button>
+                </div>
             </div>
         </div>
-      </div>
-    </div>
-
-    <!-- Facts & Figures => portion, time, etc. -->
-    <div class="row">
-        <div class="table-responsive d-inline-block">
-          <h2>Facts &amp; Figures</h2>
-            <table class="table table-striped table-bordered text-center">
-              <thead class="thead-dark">
-                <tr>
-                  <th class="text-center">Quantity</th>
-                  <th class="text-center">Difficulty</th>
-                  <th class="text-center">Prep. time</th>
-                  <th class="text-center">Total time</th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr>
-                  <td>4 portions</td> <!-- data input -->
-                  <td>Easy</td>       <!-- data input -->
-                  <td>25 min</td>     <!-- data input -->
-                  <td>90 min</td>     <!-- data input -->
-                </tr>
-              </tbody>
-            </table>
-        </div>
-    </div>
-
-    <!-- intro -->
-    <div class="row">
-      <div class="col-12">
-        <P class="mt-10">
-        Here is a recipe of a tasty and simple Iranian dish. It's a sort of Omelette with eggplants. Generally the dish is somewhat flexible-- feel free to adjust the quantities to your taste. I personally prefer the Garlicky version (check out the ingredients section). Enjoy!!
-        </P>
-      </div>
-    </div>
-
-    <!-- ingredients table -->
-    <div class="row">
-      <div class="col-12 table-responsive">
-        <h2>Ingredients</h2>
-        <table class="table table-striped">
-          <thead class="thead-dark">
-              <th class="text-center">&nbsp;</th>
-              <th class="text-center">Subtle</th>
-              <th class="text-center">Garlicky</th>
-          </thead>
-          <tbody>
-            <tr>
-              <th class="text-center">Onion</th>
-              <td class="text-center">1 Bulb</td>
-              <td class="text-center">1 Bulb</td>
-            </tr>
-            <tr>
-              <th class="text-center">Egg</th>
-              <td class="text-center">4 Shells</td>
-              <td class="text-center">4 Shells</td>
-            </tr>
-            <tr>
-              <th class="text-center">Eggplant</th>
-              <td class="text-center">4 Fruits</td>
-              <td class="text-center">4 Fruits</td>
-            </tr>
-            <tr>
-              <th class="text-center">Garlic</th>
-              <td class="text-center">3 Cloves</td>
-              <td class="text-center">6 Cloves</td>
-            </tr>
-            <tr>
-              <th class="text-center">Tomato</th>
-              <td class="text-center">6 Fruits</td>
-              <td class="text-center">6 Fruits</td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
-    </div>
-
-
-    <!-- instructions -->
-    <div class="row">
-        <div class="col-12">
-            <h2>Instructions in 5 steps</h2>
-            <div class="media">
-              <img class="d-flex mr-3 img-thumbnail align-self-center hidden-xs" src="images/eggplants_in_oven.jpg" alt="eggplants_in_oven">
-              <div class="media-body">
-                <h3 class="mt-0">Step 1</h3>
-                <P>Originally the eggplants are supposed to be grilled on fire. This gives them a unique taste. I used my oven instead like below. Let them inside for 45 min at 170-180°C.</P>
-              </div>
-            </div>
-            <div>
-                <img class="d-flex mr-3 img-thumbnail align-self-center visible-xs vw-100" src="images/eggplants_in_oven.jpg" alt="eggplants_in_oven">
-            </div>
-
-            <div class="media">
-              <img class="d-flex mr-3 img-thumbnail align-self-center hidden-xs" src="images/ingredients_ready_to_mix.jpg" alt="ingredients_ready_to_mix">
-              <div class="media-body">
-                <h3 class="mt-0">Step 2</h3>
-                <P>After 45 minutes, let them cool down. In the meantime, cut your onions and garlic and chop the tomatoes (maybe use a mixer but don't over do it!). Your result should look something like this.</P>
-                <P>Its should be now fairly easy to peel the eggplants off which we do in this step and then using a mixer or a simple knife to chop the already peeled eggplants.</P>
-              </div>
-            </div>
-            <div>
-                <img class="d-flex mr-3 img-thumbnail align-self-center visible-xs vw-100" src="images/ingredients_ready_to_mix.jpg" alt="ingredients_ready_to_mix">
-            </div>
-
-            <div class="media">
-              <img class="d-flex mr-3 img-thumbnail align-self-center hidden-xs" src="images/base_ready.jpg" alt="base_ready">
-              <div class="media-body">
-                <h3 class="mt-0">Step 3</h3>
-                <P>Now we start frying everything! Start with onions and garlic, after 5 minutes, add the eggplants. When the mixture got a bit golden, add the tomatoes, bring the stove lower and put a lid on top of the pan. Let it cook for another 10 minutes. You’ll have something like this at the end of this step.</P>
-              </div>
-            </div>
-            <div>
-                <img class="d-flex mr-3 img-thumbnail align-self-center visible-xs vw-100" src="images/base_ready.jpg" alt="base_ready">
-            </div>
-
-            <div class="media">
-              <img class="d-flex mr-3 img-thumbnail align-self-center hidden-xs" src="images/eggs_added.jpg" alt="eggs_added">
-              <div class="media-body">
-                <h3 class="mt-0">Step 4</h3>
-                <P>Break and add the eggs! Before adding the eggs make some placeholders so they don't spread all over as shown in the picture below. Afterwards put the lid on top of the pan again. Let it cook for another 5-10 minutes. </P>
-              </div>
-            </div>
-            <div>
-                <img class="d-flex mr-3 img-thumbnail align-self-center visible-xs vw-100" src="images/eggs_added.jpg" alt="eggs_added">
-            </div>
-
-            <div class="media">
-              <img class="d-flex mr-3 img-thumbnail align-self-center hidden-xs" src="images/serve.jpg" alt="serve">
-              <div class="media-body">
-                <h3 class="mt-0">Step 5</h3>
-                <P>And finally Mirza Ghassemi is ready to serve! Maybe add some parsley on the side to decorate it like I did. Bon Appetit!</P>
-              </div>
-            </div>
-            <div>
-                <img class="d-flex mr-3 img-thumbnail align-self-center visible-xs vw-100" src="images/serve.jpg" alt="serve">
-            </div>
-
-            <hr>
-
-        </div>
-    </div>
+    <hr>
 
     <!-- quote -->
     <div class="row">
@@ -229,7 +126,7 @@
       <a class="btn btn-social-icon btn-google text-white" href="www.google.com"><i class="fa fa-google-plus"></i></a>
       <a class="btn btn-social-icon btn-facebook text-white" href="www.facebook.com"><i class="fa fa-facebook"></i></a>
       <a class="btn btn-social-icon btn-instagram text-white" href="www.instagram.com"><i class="fa fa-instagram"></i></a>
-      <p class="m-0 text-white">Copyright &copy; Your Website 2020</p>
+      <p class="m-0 text-white">Copyright &copy; Mahin recipes 2020</p>
     </div>
     <!-- /.container -->
   </footer>
