--- a/mirza_ghassemi_mahin.html
+++ b/mirza_ghassemi_mahin.html
@@ -33,7 +33,7 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="#">Home
+            <a class="nav-link" href="./index.html">Home
               <span class="sr-only">(current)</span>
             </a>
           </li>
@@ -55,14 +55,23 @@
     <div class="row">
       <div class="col-12">
           <div class="media">
-            <img class="d-flex mr-3 img-thumbnail align-self-center rounded hidden-xs" src="images/chef.jpg" alt="chef">
+            <img class="d-flex mr-3 img-thumbnail align-self-center rounded hidden-xs" src="img/mirza_ghessemie_mahin/chef.jpg" alt="chef">
             <div class="media-body">
               <!-- Title -->
               <h1 class="mt-0">Mirza Ghassemi</h1>
               <!-- Author -->
-              <p class="lead"> by <a href="https://www.facebook.com/">Mahin Hekmatian</a></p>
+              <p class="lead"> by <a href="https://www.facebook.com/">Mahin</a></p>
             </div>
         </div>
+      </div>
+    </div>
+
+    <!-- intro -->
+    <div class="row">
+      <div class="col-12">
+        <P class="mt-10">
+        Here is a recipe of a tasty and simple Iranian dish. It's a sort of Omelette with eggplants. Generally the dish is somewhat flexible-- feel free to adjust the quantities to your taste. I personally prefer the Garlicky version (check out the ingredients section). Enjoy!!
+        </P>
       </div>
     </div>
 
@@ -89,15 +98,6 @@
               </tbody>
             </table>
         </div>
-    </div>
-
-    <!-- intro -->
-    <div class="row">
-      <div class="col-12">
-        <P class="mt-10">
-        Here is a recipe of a tasty and simple Iranian dish. It's a sort of Omelette with eggplants. Generally the dish is somewhat flexible-- feel free to adjust the quantities to your taste. I personally prefer the Garlicky version (check out the ingredients section). Enjoy!!
-        </P>
-      </div>
     </div>
 
     <!-- ingredients table -->
@@ -140,10 +140,6 @@
         </table>
       </div>
     </div>
-    <!-- ingredients image for xs -->
-    <div class="row">
-        <img class="d-flex mr-3 img-thumbnail align-self-center vw-100 visible-xs" src="images/ingredients.jpg" alt="ingredients">
-    </div>
 
 
     <!-- instructions -->
@@ -151,18 +147,18 @@
         <div class="col-12">
             <h2>Instructions in 5 steps</h2>
             <div class="media">
-              <img class="d-flex mr-3 img-thumbnail align-self-center hidden-xs" src="images/eggplants_in_oven.jpg" alt="eggplants_in_oven">
+              <img class="d-flex mr-3 img-thumbnail align-self-center hidden-xs" src="img/mirza_ghessemie_mahin/eggplants_in_oven.jpg" alt="eggplants_in_oven">
               <div class="media-body">
                 <h3 class="mt-0">Step 1</h3>
                 <P>Originally the eggplants are supposed to be grilled on fire. This gives them a unique taste. I used my oven instead like below. Let them inside for 45 min at 170-180°C.</P>
               </div>
             </div>
             <div>
-                <img class="d-flex mr-3 img-thumbnail align-self-center visible-xs vw-100" src="images/eggplants_in_oven.jpg" alt="eggplants_in_oven">
+                <img class="d-flex mr-3 img-thumbnail align-self-center visible-xs vw-100" src="img/mirza_ghessemie_mahin/eggplants_in_oven.jpg" alt="eggplants_in_oven">
             </div>
 
             <div class="media">
-              <img class="d-flex mr-3 img-thumbnail align-self-center hidden-xs" src="images/ingredients_ready_to_mix.jpg" alt="ingredients_ready_to_mix">
+              <img class="d-flex mr-3 img-thumbnail align-self-center hidden-xs" src="img/mirza_ghessemie_mahin/ingredients_ready_to_mix.jpg" alt="ingredients_ready_to_mix">
               <div class="media-body">
                 <h3 class="mt-0">Step 2</h3>
                 <P>After 45 minutes, let them cool down. In the meantime, cut your onions and garlic and chop the tomatoes (maybe use a mixer but don't over do it!). Your result should look something like this.</P>
@@ -170,42 +166,41 @@
               </div>
             </div>
             <div>
-                <img class="d-flex mr-3 img-thumbnail align-self-center visible-xs vw-100" src="images/ingredients_ready_to_mix.jpg" alt="ingredients_ready_to_mix">
+                <img class="d-flex mr-3 img-thumbnail align-self-center visible-xs vw-100" src="img/mirza_ghessemie_mahin/ingredients_ready_to_mix.jpg" alt="ingredients_ready_to_mix">
             </div>
 
             <div class="media">
-              <img class="d-flex mr-3 img-thumbnail align-self-center hidden-xs" src="images/base_ready.jpg" alt="base_ready">
+              <img class="d-flex mr-3 img-thumbnail align-self-center hidden-xs" src="img/mirza_ghessemie_mahin/base_ready.jpg" alt="base_ready">
               <div class="media-body">
                 <h3 class="mt-0">Step 3</h3>
                 <P>Now we start frying everything! Start with onions and garlic, after 5 minutes, add the eggplants. When the mixture got a bit golden, add the tomatoes, bring the stove lower and put a lid on top of the pan. Let it cook for another 10 minutes. You’ll have something like this at the end of this step.</P>
               </div>
             </div>
             <div>
-                <img class="d-flex mr-3 img-thumbnail align-self-center visible-xs vw-100" src="images/base_ready.jpg" alt="base_ready">
+                <img class="d-flex mr-3 img-thumbnail align-self-center visible-xs vw-100" src="img/mirza_ghessemie_mahin/base_ready.jpg" alt="base_ready">
             </div>
 
             <div class="media">
-              <img class="d-flex mr-3 img-thumbnail align-self-center hidden-xs" src="images/eggs_added.jpg" alt="eggs_added">
+              <img class="d-flex mr-3 img-thumbnail align-self-center hidden-xs" src="img/mirza_ghessemie_mahin/eggs_added.jpg" alt="eggs_added">
               <div class="media-body">
                 <h3 class="mt-0">Step 4</h3>
                 <P>Break and add the eggs! Before adding the eggs make some placeholders so they don't spread all over as shown in the picture below. Afterwards put the lid on top of the pan again. Let it cook for another 5-10 minutes. </P>
               </div>
             </div>
             <div>
-                <img class="d-flex mr-3 img-thumbnail align-self-center visible-xs vw-100" src="images/eggs_added.jpg" alt="eggs_added">
+                <img class="d-flex mr-3 img-thumbnail align-self-center visible-xs vw-100" src="img/mirza_ghessemie_mahin/eggs_added.jpg" alt="eggs_added">
             </div>
 
             <div class="media">
-              <img class="d-flex mr-3 img-thumbnail align-self-center hidden-xs" src="images/serve.jpg" alt="serve">
+              <img class="d-flex mr-3 img-thumbnail align-self-center hidden-xs" src="img/mirza_ghessemie_mahin/serve.jpg" alt="serve">
               <div class="media-body">
                 <h3 class="mt-0">Step 5</h3>
                 <P>And finally Mirza Ghassemi is ready to serve! Maybe add some parsley on the side to decorate it like I did. Bon Appetit!</P>
               </div>
             </div>
             <div>
-                <img class="d-flex mr-3 img-thumbnail align-self-center visible-xs vw-100" src="images/serve.jpg" alt="serve">
+                <img class="d-flex mr-3 img-thumbnail align-self-center visible-xs vw-100" src="img/mirza_ghessemie_mahin/serve.jpg" alt="serve">
             </div>
-
             <hr>
 
         </div>
