--- a/index.html
+++ b/index.html
@@ -22,114 +22,110 @@
 </head>
 
 <body>
-
-  <!-- Navigation -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark position-static">
-    <div class="container">
-      <a class="navbar-brand" href="#">Mahin recipes</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarResponsive">
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
-            <a class="nav-link" href="#">Home
-              <span class="sr-only">(current)</span>
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">About</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Contact</a>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </nav>
-
-  <!-- Page Content -->
-  <div class="container">
-
-    <!-- carousel -->
-    <div class="row">
-            <div class="col">
-                <div class="carousel slide" id="mycarousel" data-ride="carousel">
-                    <div class="carousel-inner" role="listbox">
-
-                        <div class="carousel-item active" id="mirza_ghessemie_mahin">
-                            <a href="./mirza_ghassemi_mahin.html">
-                                <img class="d-block img-fluid img-thumbnail align-self-center" src="img/mirza_ghessemie_mahin/ingredients_size_fitted.jpg" alt="ingredients">
-                                <div class="carousel-caption d-none d-md-block text-light hidden-xs">
-                                    <h2>Mirza Ghessemie</h2>
-                                    <p>A tasty and easily made Iranian Omelette with eggplants!</p>
-                                </div>
-                            </a>
+    <!-- Navigation -->
+    <header>
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark position-static">
+        <div class="container">
+          <a class="navbar-brand" href="#">Mahin recipes</a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarResponsive">
+            <ul class="navbar-nav mr-auto">
+              <li class="nav-item active">
+                <a class="nav-link" href="#">Home
+                  <span class="sr-only">(current)</span>
+                </a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">About</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Contact</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    </header>
+    <!-- Page Content -->
+    <main role="main">
+        <!-- carousel -->
+        <div id="my_carousel" class="carousel slide" data-ride="carousel">
+            <!-- carousel indicators-->
+            <ol class="carousel-indicators">
+                <li data-target="#my_carousel" data-slide-to="0" class="active"></li>
+                <li data-target="#my_carousel" data-slide-to="1"></li>
+                <li data-target="#my_carousel" data-slide-to="2"></li>
+            </ol>
+            <!-- carousel inner-->
+            <div class="carousel-inner" role="listbox">
+                <!-- mirza_ghassemie_mahin-->
+                <div class="carousel-item active" id="mirza_ghassemie_mahin">
+                    <a href="./mirza_ghassemi_mahin.html">
+                        <img class="img-thumbnail d-block" src="img/mirza_ghassemie_mahin/ingredients_size_fitted.jpg" alt="ingredients">
+                        <div class="carousel-caption d-block text-light">
+                            <h2>Mirza Ghessemie</h2>
+                            <p class="hidden-xs">A tasty and easily made Iranian Omelette with eggplants!</p>
                         </div>
-
-                        <div class="carousel-item" id="carrot_cake_alex">
-                            <a href="./carrot_cake_alex.html">
-                                <img class="d-block img-fluid img-thumbnail align-self-center" src="img/carrot_cake_alex/served.jpeg" alt="ingredients">
-                                <div class="carousel-caption d-none d-md-block text-dark hidden-xs">
-                                    <h2>Lazy carrot cake</h2>
-                                    <p>A quick &amp; healthy one!</p>
-                                </div>
-                            </a>
+                    </a>
+                </div>
+                <!-- carrot_cake_alex-->
+                <div class="carousel-item" id="carrot_cake_alex">
+                    <a href="./carrot_cake_alex.html">
+                        <img class="d-block img-fluid img-thumbnail align-self-center" src="img/carrot_cake_alex/served.jpeg" alt="ingredients">
+                        <div class="carousel-caption d-block text-light">
+                            <h2>Lazy carrot cake</h2>
+                            <p class="hidden-xs">A quick &amp; healthy one!</p>
                         </div>
-
-                        <div class="carousel-item" id="a_soup_recipe_from_the_north">
-                            <a href="./a_soup_recipe_from_the_north_joanna.html">
-                                <img class="d-block img-fluid img-thumbnail align-self-center" src="img/a_soup_recipe_from_the_north_joanna/ingredients.jpeg" alt="ingredients">
-                                <div class="carousel-caption d-none d-md-block text-primary hidden-xs">
-                                    <h2>A recipe from the North</h2>
-                                    <p>This soup makes even Swedish cheese tasty! ;)</p>
-                                </div>
-                            </a>
+                    </a>
+                </div>
+                <!-- ca_soup_recipe_from_the_north_joanna-->
+                <div class="carousel-item" id="a_soup_recipe_from_the_north">
+                    <a href="./a_soup_recipe_from_the_north_joanna.html">
+                        <img class="d-block img-fluid img-thumbnail align-self-center" src="img/a_soup_recipe_from_the_north_joanna/ingredients.jpeg" alt="ingredients">
+                        <div class="carousel-caption d-block text-light">
+                            <h2>A recipe from the North</h2>
+                            <p class="hidden-xs">This soup makes even Swedish cheese tasty! ;)</p>
                         </div>
-
-                    </div>
-
-                    <ol class="carousel-indicators">
-                        <li data-target="#mycarousel" data-slide-to="0" class="active"></li>
-                        <li data-target="#mycarousel" data-slide-to="1" class="active"></li>
-                        <li data-target="#mycarousel" data-slide-to="2" class="active"></li>
-                    </ol>
-                    <a class="carousel-control-prev" href="#mycarousel" role="button" data-slide="prev"><span class="carousel-control-prev-icon"></span></a>
-                    <a class="carousel-control-next" href="#mycarousel" role="button" data-slide="next"><span class="carousel-control-next-icon"></span></a>
-                    <button class="btn btn-danger btn-sm" id="carousel-button">
-                        <span class="fa fa-pause"></span>
-                    </button>
+                    </a>
                 </div>
             </div>
+            <!-- prev & next-->
+            <a class="carousel-control-prev" href="#my_carousel" role="button" data-slide="prev"><span class="carousel-control-prev-icon"></span></a>
+            <a class="carousel-control-next" href="#my_carousel" role="button" data-slide="next"><span class="carousel-control-next-icon"></span></a>
         </div>
-    <hr>
+        <hr>
 
-    <!-- quote -->
-    <div class="row">
-      <div class="col-12">
-        <div class="card card-body bg-light">
-          <blockquote class="blockquote">
-          <p class="mb-0">“While it is always possible to wake a person who's sleeping, no amount of noise will wake a person who is pretending to be asleep.”</p>
-          <footer class="blockquote-footer">Jonathan Safran Foer
-            <cite title="Source Title">Eating Animals, 2009, ISBN: 0316069906</cite>
+        <div class="container">
+            <!-- quote -->
+            <div class="row">
+              <div class="col-12">
+                <div class="card card-body bg-light">
+                  <blockquote class="blockquote">
+                  <p class="mb-0">“While it is always possible to wake a person who's sleeping, no amount of noise will wake a person who is pretending to be asleep.”</p>
+                  <footer class="blockquote-footer">Jonathan Safran Foer
+                    <cite title="Source Title">Eating Animals, 2009, ISBN: 0316069906</cite>
+                  </footer>
+                </blockquote>
+                </div>
+              </div>
+            </div>
+            <hr>
+          </div>
+
+          <!-- Footer -->
+          <footer class="py-5 bg-dark">
+            <div class="container text-center">
+              <a class="btn btn-social-icon btn-google text-white" href="www.google.com"><i class="fa fa-google-plus"></i></a>
+              <a class="btn btn-social-icon btn-facebook text-white" href="www.facebook.com"><i class="fa fa-facebook"></i></a>
+              <a class="btn btn-social-icon btn-instagram text-white" href="www.instagram.com"><i class="fa fa-instagram"></i></a>
+              <p class="m-0 text-white">Copyright &copy; Mahin recipes 2020</p>
+            </div>
+            <!-- /.container -->
           </footer>
-        </blockquote>
-        </div>
-      </div>
-    </div>
-    <hr>
-  </div>
 
-  <!-- Footer -->
-  <footer class="py-5 bg-dark">
-    <div class="container text-center">
-      <a class="btn btn-social-icon btn-google text-white" href="www.google.com"><i class="fa fa-google-plus"></i></a>
-      <a class="btn btn-social-icon btn-facebook text-white" href="www.facebook.com"><i class="fa fa-facebook"></i></a>
-      <a class="btn btn-social-icon btn-instagram text-white" href="www.instagram.com"><i class="fa fa-instagram"></i></a>
-      <p class="m-0 text-white">Copyright &copy; Mahin recipes 2020</p>
-    </div>
-    <!-- /.container -->
-  </footer>
+    </main>
 
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
@@ -138,3 +134,7 @@
 </body>
 
 </html>
+
+<!--
+
+-->
